5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1734_2496.log
== TEST (2019-05-09 18:44:04) 
-- CODE:
n=int(input("digite um numero inteiro:"))
cont=0
soma=0
while(num!=-1):
	soma=soma+n
	n=int(input("digite um numero inteiro:"))
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(num!=-1):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:44:11) 
-- CODE:
n=int(input("digite um numero inteiro:"))
cont=0
soma=0
while(num!=-1):
	soma=soma+n
	n=int(input("digite um numero inteiro:"))
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(num!=-1):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:44:57) 
-- CODE:
n=int(input("digite um numero inteiro:"))
cont=0
soma=0
while(n!=-1):
	soma=soma+n
	n=int(input("digite um numero inteiro:"))
print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:45:09) 
-- CODE:
n=int(input("digite um numero inteiro:"))
cont=0
soma=0
while(n!=-1):
	soma=soma+n
	n=int(input("digite um numero inteiro:"))
print(soma)

-- EXECUTION TIME:
0.116629
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
